# sensei

./: .coverage  .env  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  GEMINI.md  LICENSE  README.md  TODO.md  gemini-extension.json  main.py  nuitka-crash-report.xml  prompts.example.yaml  pyproject.toml  run.sh
.github/workflows/: ci.yml  docker.yml
app/: api.py  main.py  server.py
app/agents/: base.py  orchestrator.py  router.py
app/core/: knowledge.py  llm.py  memory.py
app/tools/: nmap.py  system.py
scripts/: benchmark_router.py  validate_behaviors.py
sensei/agents/: orchestrator.py  router.py
sensei/core/: a2a.py
tests/: test_api.py  test_cli.py  test_docker_mcp.py  test_e2e.py  test_knowledge.py  test_mcp_server.py  test_memory_cli.py  test_orchestrator_integrity.py  test_swarm.py  test_system_tool.py
